2.2.7
- mobile log: time will updated now with server time
- mobile access: check for login with mobile browser implemented
- some minor bugfixes and cleanup

2.2.6
- openTimetool is now ready for php 5.3. config.php is updated with the minimum statements to get it run
  eliminated deprecated functions (i.e. split to explode, ...) 
  fixed some 5.3 related bugs caused by now different behaviour
- major performance improvement for the team page
  the compress rate for building the team page can now be set by a parameter in the config.php
  to get the best compromise for sufficient information and performance use the default setting 
- it's now possible to delete old exports on export popup page (file and db entry)
  
2.2.5 
- wrong calculated sum in export to OO-template is fixed
- project related reports are possible now by enhancement to OOTemplate-based export
- in folder docs/Samples for OO Templating/ you'll find
  a) 2 templates for project based OO-Export
  b) a brief description of the data available for OO-Export-Templating (in en and de)	 

2.2.4 (includes the changes from release 2.2.3)
- users may now be deleted completely with all booked times and project memberships
- projects can now be deleted with all subprojects, all team memberships and all booked times
  both features are really necessary for house keeping of an oTt installation over times
  Attention! All data will be irrevocably removed by using this functions!

2.2.3 (release was not built, all changes in release 2.2.4)
- authentication against LDAP implemented, configurable in config.php
  password fields and reset password function will now automatically hidden if authentication against LDAP is used
  also the "change password" link in the navigation 
- overview by date, extended filter: display all users available also for admins now

2.2.2
- added feature for mobile access
  Call openTimetool with http://<server>/<ott-installdir>/mobile_login